Fix alignment/ordering of leader/manager/worker badges
In minimized mode, nodes looked odd having their "M" or "W" badges
right-indented.

--- a/app/files/css/node.css
+++ b/app/files/css/node.css
@@ -104,6 +104,14 @@
   margin: 0.2em;
 }
 
+.node .badge.visible {
+  visibility: visible;
+}
+
+.node .badge.hidden {
+  visibility: hidden;
+}
+
 .node .alert {
   padding: 0.2em;
   margin: 0.2em;
